tests/src/frontend/typechecking/invalid/mutable_lambda_10.sk
fun main(): void {
  g: Int -> Int = (_ -> 112);
  f = (() ~> g(42));
  _ = f();
  print_raw("Fail")
}
